--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,4 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;900&family=Water+Brush&display=swap');
 
 //Framework
+@import './variaveis.scss';
 @import './bootstrap.min.scss';
+@import './config.scss';
+@import './header.scss';
