--- a/assets/scss/variaveis.scss
+++ b/assets/scss/variaveis.scss
@@ -1,5 +1,8 @@
-$cor-primaria:#FFC107;
-$cor-secundaria:#343A40;
-
+$amarelo:#FFC107;
 $rosa: #FF0F9A;
 $branco:#ffff;
+$cinza:#343A40;
+$roxo:#B343C3;
+
+$cor-primaria:$amarelo;
+$cor-secundaria:$cinza;
