--- a/assets/scss/ver-produto.scss
+++ b/assets/scss/ver-produto.scss
@@ -1,28 +1,46 @@
 .produtos {
-  .produto-preco {
-    form {
-      select {
-        margin: 2px 0 20px;
+  .produtos-compra {
+    figure {
+      margin: 0;
+    }
+
+    .produtos-conteudo {
+      h1 {
+        margin: 0;
+        font-size: 32px;
+      }
+
+      p {
+        font-size: 16px;
       }
     }
 
-    strong {
-      font-size: 40px;
+    .produto-preco {
+      form {
+        select {
+          margin: 10px 0 20px;
+        }
+
+        font-weight: 100;
+      }
+
+      strong {
+        font-size: 40px;
+      }
+
+      p {
+        font-weight: bold;
+        display: block;
+      }
     }
 
-    p {
-      font-weight: bold;
-      display: block;
+    .produtos-stars {
+      svg {
+        height: 20px;
+        width: 20px;
+        fill: $amarelo;
+      }
     }
   }
-
-  .produtos-stars {
-    svg {
-      height: 20px;
-      width: 20px;
-      fill: $amarelo;
-    }
-  }
-
 
 }
